--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="media-queries.css">
-  <title>Responsive Portfolio</title>
+  <title>Akash Goswami Portfolio</title>
 </head>
 
 <body>
