--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         </div>
         <div class="work-list">
           <div class="work">
-            <img src="project1.webp" alt="img">
+            <img src="project1.0.jpg" alt="img">
             <div class="layer">
               <h3>Web Development.</h3>
               <p>Designed the frontend of a responsive e-commerce website, closely resembling the user interface of
