--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div>
 
       <!-- profile-image -->
-      <div class="image">
+      <div class="image" id="img">
         <a href="picfor2.jpg"><img src="picfor2.jpg" alt="profile" /></a>
       </div>
     </div>
