--- a/Form Validation-  project/index.html
+++ b/Form Validation-  project/index.html
@@ -14,7 +14,7 @@
             <i class="fas fa-paper-plane"></i>
 
             <div class="input-group">
-                <label>Full Name</label>
+                <label>Full name</label>
                 <input type="text" name="Name" placeholder="Enter Your name" id="contact-name" onkeyup="validateName()">
                 <span id="name-error"></span>
             </div>
