hamburger styling change

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li id="nav"><a href="#skill-sec">Skills</a></li>
         <li id="nav"><a href="#project-sec">Projects</a></li>
         <li id="nav"><a href="#Contact">Contact</a></li>
-        <li><a href="Form Validation-  project/index.html">Feedback</a></li>
+        <li id="validation"><a href="Form Validation-  project/index.html">Feedback</a></li>
 
         <!-- .........Dark mode....................... -->
         <div class="mode">
